# adora

./: .gitignore  ActiveWatcherList  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
adora/: main.py  main_test.py  rag_config.example.yaml  rag_config.yaml
adora/config_parser/: data_types.py  utils.py
adora/factories/baseclasses/: basevectorstore.py
adora/factories/embedding/: embeddingFactory.py
adora/factories/llm/: llmFactory.py
adora/factories/llm/implementations/: googleGenAILLM.py  ollamaLLM.py
adora/factories/vectorStore/: VectorStoreFactory.py
adora/factories/vectorStore/implementations/: faiss_vector_store.py
adora/pipeline/: assembler.py
brags/: __init__.py  __main__.py  _golib.py  cli.py  main.py  main_test.py
brags/commands/: ingest.py  init.py  query.py
brags/factories/chains/: safe_chain.py
brags/factories/vectorStore/implementations/: faiss_vector_store.py
brags/pipeline/: assembler.py
brags/utils/: logging_setup.py
go/: ActiveWatcherList  build.sh  go.mod  go.sum  main.go  main_test.go
go/callPython/: performFileOp.go  pythonCaller.go
go/cronFileWatcher/: cronFileWatcher.go
go/fileWatcher/: fileWatcher.go
go/pythonFiles/: vector_store_updater.py
go/server/: data_types.go  handleWS.go
go/static/: index.html
go/utils/: utils.go
go/watcherManager/: watcherManager.go
vector_db/: index.faiss  index.pkl
